update: image alignment fix

--- a/css/styles.css
+++ b/css/styles.css
@@ -64,7 +64,7 @@ a {
 }
 
 .member {
-  width: 110px;
+  width: 100px;
   display: flex;
   flex-direction: column;
   align-items: center;
